dividing logic of api and web for Swagger UI
